fixed spacing on fe lettering

--- a/styles/_backdrop-nav.scss
+++ b/styles/_backdrop-nav.scss
@@ -71,11 +71,13 @@
 }
 
 #fe {
+  display: flex;
+  flex-direction: row;
   background-color: $contrast-color;
   font-weight: 400;
   font-family: $title-font;
-  text-transform: uppercase;
 	font-size: 1.3rem;
+  letter-spacing: 2px;
   margin-top: 8px;
   padding: 4px 10px 6px 12px;
 }
