--- a/styles/global.css
+++ b/styles/global.css
@@ -201,11 +201,13 @@
 }
 
 #fe {
+  display: flex;
+  flex-direction: row;
   background-color: #fff;
   font-weight: 400;
   font-family: "Lexend Deca", sans-serif;
-  text-transform: uppercase;
   font-size: 1.3rem;
+  letter-spacing: 2px;
   margin-top: 8px;
   padding: 4px 10px 6px 12px;
 }
